2004-09-17 Alain Magloire 	Support for 64 bits application 	PR 74056. Pathc from Artyom Kuanbekov 	To much files to enumerate.